apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 11
targetCompatibility = 11

group 'hu.kristall'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    implementation 'io.javalin:javalin:4.3.0'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'org.slf4j:slf4j-simple:1.7.35'

    implementation 'org.jline:jline-reader:3.20.0'
    implementation 'org.jline:jline-terminal:3.20.0'

    implementation 'commons-cli:commons-cli:1.5.0'
}

test {
    useJUnitPlatform()
}

jar {
    archiveName 'server.jar'
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    manifest {
        attributes 'Main-Class': 'Main'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}